final content changes;

--- a/premedia/Tatamotors/company-profile.html
+++ b/premedia/Tatamotors/company-profile.html
@@ -436,10 +436,11 @@
                       <p class="text-xl">Tata Motors Group also holds key subsidiaries, such as Tata Daewoo Commercial Vehicles and Tata Technologies Limited.</p>
                       <p class="text-xl">In 2004, the Tata Motors Group acquired Korea’s second largest truck maker Daewoo Commercial Vehicles. Today, it exports its vehicles to 60+ countries.</p>
                       <p class="text-xl">Tata Technologies Limited is a leading company in engineering services outsourcing and product development IT services, providing a competitive edge to global manufacturers.	</p>
+                      <p class="pt-3" style="color: #bbb">The Integrated Report does not include information on these subsidiaries explicitly, except for the consolidated financial figures of the Tata Motors Group.</p>
                     </div>
                   </div>
                   <section class="cprof bg-center-top bg-no-repeat">
-                    <div class="container-fluid pt-4" ">
+                    <div class="container-fluid pt-4" >
                       <div class="row pt-1">
                         <div class="col-xl-8 offset-xl-1">
                           <h3 class="block-title text-left mb-30">Company Profile</h3>
