--- a/premedia/Tatamotors/corporate-governance.html
+++ b/premedia/Tatamotors/corporate-governance.html
@@ -409,11 +409,11 @@
                     Board members also bring along the global
                   outlook required to lead a business like ours.</p>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-5">
                   <div class="table-responsive">
                     <table class="table">
                       <thead>
-                        <tr>
+                        <tr class="w-100">
                           <th>Board diversity</th>
                         </tr>
                       </thead>
@@ -423,7 +423,7 @@
                           <td>2</td>
                         </tr>
                         <tr>
-                          <td scope="row">Male
+                          <td>Male
                           </td><td>4</td>
                         </tr>
                       </table>
@@ -439,12 +439,12 @@
                             <td>1</td>
                           </tr>
                           <tr>
-                            <td scope="row">Non-executive Directors
-                            </td><td>2</td>
+                            <td scope="row">Non-executive Directors</td>
+                            <td>2</td>
                           </tr>
                           <tr>
-                            <td scope="row">Independent Directors
-                            </td><td>3</td>
+                            <td scope="row">Independent Directors</td>
+                            <td>3</td>
                           </tr>
                         </table>
                       </tbody>
