--- a/premedia/Tatamotors/environmental-responsibility-2.html
+++ b/premedia/Tatamotors/environmental-responsibility-2.html
@@ -397,7 +397,7 @@
                           </tr>
                           <tr>
                             <td scope="row">Emissions from combustion of gas
-                            tCO2e (Scope 1)</th>
+                            tCO<sub>2</sub>e (Scope 1)</th>
                             <td>1,35,999</td>
                           </tr>
                           <tr>
@@ -419,11 +419,11 @@
                             <td>1,23,568</td>
                           </tr>
                           <tr>
-                            <td scope="row">Total gross CO2e based on above</th>
+                            <td scope="row">Total gross CO<sub>2</sub>e based on above</th>
                               <td>2,72,941</td>
                             </tr>
                             <tr>
-                              <td scope="row">Intensity ratio (tCO2e/£ million)</th>
+                              <td scope="row">Intensity ratio (tCO<sub>2</sub>e/£ million)</th>
                                 <td>11.87</td>
                               </tr>
                               <tr>
