--- a/premedia/Tatamotors/environmental-responsibility-3.html
+++ b/premedia/Tatamotors/environmental-responsibility-3.html
@@ -364,7 +364,7 @@
                       under TML's take-back programme. There has been a consistent
                       increase in the number of equivalent engines remanufactured every
                       year. A 5% improvement was observed in the reporting period over
-                    the previous year, resulting in revenue generation of I247 crore.</p>
+                    the previous year, resulting in revenue generation of &#8377;247 crore.</p>
                     <p>
                       Remanufacturing of an engine not only has significant economic
                       benefits, but also has great positive sustainability impact. Various
@@ -396,7 +396,7 @@
                               <p class="text-md">GHG EMISSIONS AVOIDED DUE TO
                                 REMANUFACTURING OF 6BT AND
                                 ACE ENGINES AT PROLIFE<br/>
-                                <span class="text-md">8,923.7 tCO2</span></p>
+                                <span class="text-md">8,923.7 tCO<sub>2</sub></span></p>
                               </div>			
                             </div>
                           </div>
