--- a/premedia/Tatamotors/environmental-responsibility.html
+++ b/premedia/Tatamotors/environmental-responsibility.html
@@ -387,12 +387,12 @@
                   <h6 class="title-2">SCOPE 1</h6>
                   <div class="row">
                     <div class="col-xl-6 col-md-6">
-                      <p class="p-3">
+                      <p class="pt-3">
                         ABSOLUTE EMISSIONS
                         (tCO<sub>2</sub>)<br/>
                         <span class="text-xl">60,533</span></div>
                         <div class="col-xl-6 col-md-6">
-                          <p class="p-3">
+                          <p class="pt-3">
                             SPECIFIC EMISSIONS
                             (tCO<sub>2</sub>/VEHICLE)<br/>
                             <span class="text-xl">0.13</span>
@@ -406,12 +406,14 @@
                       </h6>
                       <div class="row">
                         <div class="col-xl-6 col-md-6">
-                          <p class="p-3">
+                          <p class="pt-3">
                             ABSOLUTE EMISSIONS
                             (tCO<sub>2</sub>)<br/>
-                            <span class="text-xl">2,66,200</span></div>
+                            <span class="text-xl">2,66,200</span>
+                          </p>
+                          </div>
                             <div class="col-xl-6 col-md-6">
-                              <p class="p-3">
+                              <p class="pt-3">
                                 SPECIFIC EMISSIONS
                                 (tCO<sub>2</sub>/VEHICLE)<br/>
                                 <span class="text-xl">0.56</span>
@@ -425,54 +427,53 @@
                           <h6 class="title-2">SCOPE 3</h6>
                           <div class="row">
                             <div class="col-xl-3 col-md-6">
-                              <p class="p-3">
+                              <p class="pt-3">
                                 PURCHASED GOODS AND
-                                SERVICES<sup>1</sup> (tCO2)<br/>
+                                SERVICES<sup>1</sup> (tCO<sub>2</sub>)<br/>
                                 <span class="text-xl">3,77,590</span>
                               </p>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                              <p class="p-3">
+                              <p class="pt-3">
                                 FUEL AND ENERGY
                                 RELATED (tCO<sub>2</sub>)<br/>
                                 <span class="text-xl">77,073</span></p>
                               </div>
                               <div class="col-xl-3 col-md-6">
-                                <p class="p-3">
+                                <p class="pt-3">
                                   UPSTREAM TRANSPORTATION
                                   & DISTRIBUTION (tCO<sub>2</sub>)<br/>
                                   <span class="text-xl">16,342</span></p>
                                 </div>
                                 <div class="col-xl-3 col-md-6">
-                                  <p class="p-3">
+                                  <p class="pt-3">
                                     BUSINESS TRAVEL
                                     (tCO<sub>2</sub>)<br/>
                                     <span class="text-xl">8,865</span></p></div>
                                   </div>
-                                  <br/>
                                   <div class="row">
                                     <div class="col-xl-3 col-md-6">
-                                      <p class="p-3">
+                                      <p class="pt-3">
                                         EMPLOYEE COMMUTING
                                         (tCO<sub>2</sub>)<br/>
                                         <span class="text-xl">11,286</span></p>
                                       </div>
                                       <div class="col-xl-3 col-md-6">
-                                        <p class="p-3">
+                                        <p class="pt-3">
                                           USE OF SOLD PRODUCTS<sup>2</sup>
                                           (tCO<sub>2</sub>)<br/>
                                           <span class="text-xl">26,44,749</span>
                                         </p>
                                       </div>
                                       <div class="col-xl-3 col-md-6">
-                                        <p class="p-3">
+                                        <p class="pt-3">
                                           FRANCHISES
                                           (tCO<sub>2</sub>)<br/>
                                           <span class="text-xl">2,155</span>
                                         </p>
                                       </div>
                                       <div class="col-xl-3 col-md-6">
-                                        <p class="p-3">
+                                        <p class="pt-3">
                                           UPSTREAM LEASED ASSETS<sup>3</sup>
                                           (tCO<sub>2</sub>)<br/>
                                           <span class="text-xl">2,801</span></p>
