--- a/premedia/Tatamotors/jaguar-land-rover-transformation.html
+++ b/premedia/Tatamotors/jaguar-land-rover-transformation.html
@@ -329,6 +329,7 @@
                 systems and full-battery electric and hybrid propulsion. The new Land Rover Defender is the embodiment of the innovative spirit of JLR,
                 featuring the groundbreaking Pivi Pro infotainment system and SOTA updates, ensuring ultimate connectivity and enabling
               customers to benefit from the latest software, wherever they are in the world.</p>
+              <p class="text-grey py-4">Read more about JLR's new product launches <a href="new-launches.html">here</a>.</p>
               <h3>Modular Longitudinal Architecture (MLA)</h3>
               <p>
                 JLR’s family of Ingenium petrol and diesel engines are based on a modular, flexible and scalable all-aluminium design with
