--- a/premedia/Tatamotors/operating-environment-2.html
+++ b/premedia/Tatamotors/operating-environment-2.html
@@ -407,6 +407,7 @@
                     solutions, a supplier base for EV components, vehicle
                     financing and an immersive digital experience.
                   </p>
+                  <p class="pt-4 text-grey">Read more about how TML is taking the leading in the EV space <a href="turnaround-20-2.html">here</a>.</p>
                 </div>
                 <div class="col-xl-6 col-md-6">
                   <h6>Jaguar Land Rover</h6>
@@ -526,6 +527,7 @@
                     impact and offset-frontal impact, aiming to
                     reduce the instances of road accidents and
                   the ensuing fatalities.</p>
+                  <p class="pt-4 text-grey">Read more about how TML is setting benchmarks in car safety in India <a href="turnaround-20.html">here</a>.</p>
                 </div>
                 <div class="col-xl-6 col-md-6">
                   <h6>Jaguar Land Rover</h6>
