--- a/premedia/Tatamotors/operating-environment.html
+++ b/premedia/Tatamotors/operating-environment.html
@@ -452,7 +452,7 @@
                       The COVID-19 pandemic significantly
                       impacted the performance in the fourth
                       quarter. As a result, profitability was impacted
-                      by &#8377;500 crore and free cash flow by &#8377;2,000
+                      by ~ &#8377;500 crore and free cash flow by ~ &#8377;2,000
                       crore. TML responded promptly to the crisis
                       by implementing a temporary lockdown of
                       all its plants and instituted rigorous cost and
