--- a/premedia/Tatamotors/performance-review.html
+++ b/premedia/Tatamotors/performance-review.html
@@ -23,8 +23,9 @@
   <link rel="stylesheet" media="screen" href="css/theme.min.css">
   <link rel="stylesheet" media="screen" href="css/custom.css">
   <style type="text/css">
-    .col-xl-4.col-md-6 p:last-of-type {color: #999; font-size: .9em;}
-    @media (min-width: 768px){.col-xl-4.col-md-6 h6 {min-height: 75px}}
+    .col-xl-4.col-md-6 p:last-of-type {color: #999; font-size: .9em; padding-bottom: 2em;}
+    .col-xl-4.col-md-6 h6{ font-family: unset; font-weight: normal; margin-bottom: 0}
+    @media (min-width: 768px){.col-xl-4.col-md-6 h6 {min-height: 50px}}
   </style>
   <!-- Modernizr-->
   <script src="js/modernizr.min.js"></script>
@@ -336,16 +337,16 @@
                   </div>
                 </div>
               </section>
-              <div class="container px-0">
-                <div class="row"><div class="col-xl-12"><h6 class="title-2" style="border-bottom: solid 3px #000;">FINANCIAL</h6></div></div>
+              <div class="container px-md-0">
+                <div class="row"><div class="col-xl-12 px-0"><h6 class="title-2" style="border-bottom: solid 3px #000;">FINANCIAL</h6></div></div>
                 <br/>
                 <div class="row">
                   <div class="col-xl-4 col-md-6 px-1 mb-md-5">
                     <h6>Sales volume (Wholesale) (units)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 32%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">9,61,463</div>
+                      <div class="progress-bar" role="progressbar" style="width: 32%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">9,61,463</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -362,8 +363,8 @@
                     <h6>PVs sold (Wholesale) (units)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 30%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">1,37,924</div>
+                      <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">1,37,924</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -379,8 +380,8 @@
                     <h6>CVs sold (Wholesale) (units)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 25%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">3,47,587</div>
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">3,47,587</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -398,8 +399,8 @@
                     <h6>Sales volume (Wholesale) (units)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">4,75,952</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">4,75,952</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 40%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -415,8 +416,8 @@
                     <h6>Revenue (₹ crore)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">2,61,068</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">2,61,068</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -432,8 +433,8 @@
                     <h6>Net auto debt / Shareholders’ equity (x)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">0.67</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">0.67</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 30%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -451,8 +452,8 @@
                     <h6>EBITDA margin (%)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">8.4</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">8.4</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 42%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -468,30 +469,33 @@
                     <h6>Free cash flow (Automotive) (₹ crore)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">(9,205)</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 10%;background-color: transparent;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">(9,205)</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">FY20</div>
                     </div>
                     <div class="progress mb-3">
+                      <div class="progress-bar" role="progressbar" style="width: 16%;background-color: transparent;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                       <div class="progress-bar grey" role="progressbar" style="width: 42%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">(9,168)</div>
                       <div class="progress-bar grey" role="progressbar" style="width: 42%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">FY19</div>
                     </div>			
                     <div class="progress mb-3">
+                      <div class="progress-bar" role="progressbar" style="width: 24%;background-color: transparent;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                       <div class="progress-bar grey" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">(7,287)</div>
                       <div class="progress-bar grey" role="progressbar" style="width: 38%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">FY18</div>
                     </div>
-                    <p>Consolidated</p>
+                    <p class="text-right">Consolidated</p>
                   </div>
                 </div>
                 <br/><br/>
-                <div class="row"><div class="col-xl-12"><h6 class="title-2" style="border-bottom: solid 3px #000;">NON-FINANCIAL</h6></div></div>
+                <div class="row"><div class="col-xl-12 p-0"><h6 class="title-2" style="border-bottom: solid 3px #000;">NON-FINANCIAL</h6></div></div>
                 <br/>
                 <div class="row">
                   <div class="col-xl-4 col-md-6 px-1 mb-md-5">
                     <h6>Specific GHG emissions (tCO2/vehicle)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">0.69</div>
+                      <div class="progress-bar" role="progressbar" style="width: 42%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 42%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">0.69</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 43%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -507,8 +511,8 @@
                     <h6>Patents granted (Nos.)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 25%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">178</div>
+                      <div class="progress-bar" role="progressbar" style="width: 25%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 60%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">178</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 25%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -524,8 +528,8 @@
                     <h6>Ratio of female employees / total employees (%)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">5.78</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">5.78</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 38%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -543,8 +547,8 @@
                     <h6>Water consumption (m3)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">21,39,464</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">21,39,464</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 25%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -560,8 +564,8 @@
                     <h6>Energy consumption (MWh)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">15,40,933</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">15,40,933</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 28%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -578,8 +582,8 @@
                     GHG emissions (tCO2e)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">1,52,462</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">1,52,462</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 28%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -598,8 +602,8 @@
                     generation (tonnes)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">10,388</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">10,388</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 32%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
@@ -616,8 +620,8 @@
                     consumption (MWh)</h6>
                     <br/>
                     <div class="progress mb-3">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 45%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">5,71,485</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY20</div>
+                      <div class="progress-bar" role="progressbar" style="width: 45%;background:#41a8b8" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">5,71,485</div>
                     </div>
                     <div class="progress mb-3">
                       <div class="progress-bar grey" role="progressbar" style="width: 35%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">FY19</div>
