--- a/premedia/Tatamotors/social-responsibility.html
+++ b/premedia/Tatamotors/social-responsibility.html
@@ -425,31 +425,30 @@
                   <div class="container row" style="border-top: solid 1px #000; border-bottom: solid 1px #000; padding-top: 30px;">
                     <div class="col-xl-12 col-md-6">Rainwater harvesting at Ramkrishna Forgings Limited, Jamshedpur<br/><br/></div>
                     <div class="col-xl-2 col-md-6">
-                      <p><span class="text-xl">97,125M<sup>2</sup></span><br/>
+                      <p><span class="text-xl">97,125<span class="text-sm">M<sup>2</sup></sub></span><br/>
                       TOTAL PLANT AREA</p>
                     </div>
                     <div class="col-xl-2 col-md-6">
-                      <p><span class="text-xl">1,103MM</span><br/>
+                      <p><span class="text-xl">1,103<span class="text-sm">MM</sub></span><br/>
                         AVERAGE RAINFALL
                         IN A YEAR
                       </div>
-                      <div class="col-xl-2 col-md-6">
-                        <p><span class="text-xl">37,127M<sup>3</sup></span><br/>
+                      <div class="col-xl-3 col-md-6">
+                        <p><span class="text-xl">37,127<span class="text-sm">M<sup>3</sup></sub></span><br/>
                           RAINWATER
                           COLLECTED FROM
                         ROOFTOPS</p>
                       </div>
-                      <div class="col-xl-2 col-md-6">
-                        <p><span class="text-xl">13,175M<sup>3</sup></span><br/>
+                      <div class="col-xl-3 col-md-6">
+                        <p><span class="text-xl">13,175<span class="text-sm">M<sup>3</sup></sub></span><br/>
                           RAINWATER
                           COLLECTED FROM
                           SURFACE RUN-OFF
                         </div>
                         <div class="col-xl-2 col-md-6">
-                          <p><span class="text-xl">50,302M<sup>3</sup></span><br/>
-                            TOTAL RAINWATER
-                            COLLECTED IN
-                          THE YEAR</p>
+                          <p><span class="text-xl">50,302<span class="text-sm">M<sup>3</sup></sub></span><br/>
+                            TOTAL ANNUAL RAINWATER
+                            COLLECTED</p>
                         </div>
                       </div>
                     </div>
