--- a/premedia/Tatamotors/new-launches.html
+++ b/premedia/Tatamotors/new-launches.html
@@ -318,8 +318,7 @@
               <p class="text-xl">We introduced modular architectures to offer more differentiated products on the
                 same platform, moving away from our ‘multiple platform’ approach to a ‘doing more
                 with less’ philosophy. Our launches across CV, PV, luxury sedans, SUV and EV
-                portfolios reflect this, facilitating faster time to market and greater benefits of scale.
-              Stepping up the game</p>
+                portfolios reflect this, facilitating faster time to market and greater benefits of scale.</p>
               <h2>Tata Motors Limited</h2>
               <br/><br/>
               <div class="row top-left-border">
@@ -328,14 +327,14 @@
               <div class="row">
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/intra-v10-v20.png" />
-                  <h6>INTRA - V10 AND V20</h6>
+                  <h6 class="pt-4">INTRA - V10 AND V20</h6>
                   <p>
                     Built on TML’s new ‘Premium Tough’ philosophy for CVs, Tata INTRA trucks combine sophistication and visual grandeur with robustness and reliability. Their optimised engine and fuel efficiency contribute to a
                   power-packed performance.</p>
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/ultra.png" />
-                  <h6>ULTRA</h6>
+                  <h6 class="pt-4">ULTRA</h6>
                   <p>
                     Designed to meet changing customer
                     preferences in the light CV segment, ULTRA
@@ -347,7 +346,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/prima.png" />
-                  <h6>PRIMA</h6>
+                  <h6 class="pt-4">PRIMA</h6>
                   <p>The new smart Tata PRIMA, with its optimum
                     power, fuel efficiency, safety and reliability,
                     is designed for long-distance transportation.
@@ -363,14 +362,14 @@
               <div class="row">
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/altroz.png" />
-                  <h6>ALTROZ</h6>
+                  <h6 class="pt-4">ALTROZ</h6>
                   <p>
                     Built with the IMPACT 2.0 design language and the first to be developed on the Alfa architecture, the Altroz sets the Gold Standard for hatchbacks with its futuristic design, advanced platform, thrilling performance, smart technology
                   and tastefully crafted interiors. Its world class safety has been certified with the 5-star Global NCAP rating.</p>
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/harrier.png" />
-                  <h6>HARRIER</h6>
+                  <h6 class="pt-4">HARRIER</h6>
                   <p>
                     The Harrier has a bold new avatar with a compelling combination of striking exteriors, inviting interiors and 14 design enhancements, which perfectly balance its powerful stance with the natural elegance
                     of a premium SUV. Available in five stunning colours, the Harrier's design is complemented by its performance powered by the cutting-edge Kryotec 2.0 diesel engine and advanced terrain response modes.
@@ -378,13 +377,13 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/nexon.png" />
-                  <h6>NEXON</h6>
+                  <h6 class="pt-4">NEXON</h6>
                   <p>The all-new Nexon combines the practicality of an SUV and the style of a sports coupe with its high-strength steel structure, new BSVI-compliant petrol and diesel engines, iRA connected tech platform, tech-driven
                   protection, electronic stability, 6-speed drive, dual front airbags, rain-sensing wipers and many other unique features.</p>
                 </div>
-                <div class="col-xl-4 col-md-6 pt-md-3">
+                <div class="col-xl-4 col-md-6 pt-md-5">
                   <img class="nl-img" src="img/new-launches/tiago.png" />
-                  <h6>TIAGO</h6>
+                  <h6 class="pt-4">TIAGO</h6>
                   <p>Built with the IMPACT 2.0 design language, the Tiago 2020 is defined by a confident, mature and sporty feel. It is available in six exciting colours and is equipped with
                   10 new special features to suit customers’ aspirations. Its Global NCAP 4-star safety rating further adds to a superior driving experience.</p>
                 </div>
@@ -403,7 +402,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/nexon-ev.png" />
-                  <h6>NEXON EV</h6>
+                  <h6 class="pt-4">NEXON EV</h6>
                   <p>
                     A high-performance, connected vehicle, the Nexon EV is the first EV to be powered by the state-of-the-art ZIPTRON technology. It is equipped with a high-efficiency AC motor
                     that is powered by a 300+ km capacity lithium-ion battery. Acceleration of 0-100 kmph in 9.9 seconds, anxiety-free range of 312 km, 30.2 kWh battery pack, 129 PS power,
@@ -411,7 +410,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/extended-range-tigor-ev.png" />
-                  <h6>EXTENDED RANGE TIGOR EV
+                  <h6 class="pt-4">EXTENDED RANGE TIGOR EV
                   — XE+, XM+ AND XT+</h6>
                   <p>
                     The extended range of the Tigor EV offers an enhanced driving range, low cost of ownership, improved connectivity, the comfort of a sedan and zero emissions.
@@ -427,7 +426,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/refreshed-f-type.png" />
-                  <h6>REFRESHED F-TYPE</h6>
+                  <h6 class="pt-4">REFRESHED F-TYPE</h6>
                   <p>
                     The new Jaguar F-TYPE is the latest in a distinguished bloodline of powerful, agile and distinctive sports cars. Combining exhilarating performance, accomplished
                     handling and cutting-edge technology, it delivers an exceptional driving experience. Housing the advanced and efficient Ingenium petrol engine and the powerful infotainment system, Touch Pro,
@@ -435,7 +434,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/jaguar-i-pace.png" />
-                  <h6>JAGUAR I-PACE</h6>
+                  <h6 class="pt-4">JAGUAR I-PACE</h6>
                   <p>
                     The Jaguar I-PACE, the world’s first premium all-electric performance SUV, makes owning and driving an electric vehicle easier than ever with several features, such as – faster
                     charging (11kW AC domestic wall box that can add 53 km/33 miles of range (WLTP) per hour for customers with three-phase supplies); outstanding performance and range
@@ -445,7 +444,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/jaguar-xe.png" />
-                  <h6>JAGUAR XE</h6>
+                  <h6 class="pt-4">JAGUAR XE</h6>
                   <p>The new Jaguar XE runs on efficient Ingenium diesel and petrol engines with a lightweight aluminium-intensive body,
                     double wishbone front and integral link rear suspension, which deliver agile handling and excellent safety.
                     An enhanced exterior provides a more assertive appearance with new front and rear bumpers, advanced all-LED
@@ -460,7 +459,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/land-rover-defender.png" />
-                  <h6>LAND ROVER DEFENDER</h6>
+                  <h6 class="pt-4">LAND ROVER DEFENDER</h6>
                   <p>
                     An icon reimagined for the 21st century, the new Land Rover Defender is designed with purpose and engineered to excite. Its all-terrain ability ensures journeys on any
                     surface are covered with comfort and ease. The model offers electrified powertrains with advanced Mild Hybrid Electric Vehicle (MHEV) and PHEV options, as
@@ -470,7 +469,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/land-rover-discovery-sport.png" />
-                  <h6>LAND ROVER DISCOVERY SPORT</h6>
+                  <h6 class="pt-4">LAND ROVER DISCOVERY SPORT</h6>
                   <p>The new Discovery Sport is more intuitive, practical and convenient than ever before. The world’s most versatile and capable compact 5+2 SUV now features enhanced
                     design, the latest in technology and more efficient, electrified engines. Premium Transverse Architecture provides superior handling, surpasses the most stringent
                     global safety requirements and accommodates electrified powertrains. The new 48-volt MHEV, 3-cylinder PHEV or 3- and 4-cylinder Ingenium petrol and diesel engines
@@ -479,7 +478,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/range-rover-evoque.png" />
-                  <h6>RANGE ROVER EVOQUE</h6>
+                  <h6 class="pt-4">RANGE ROVER EVOQUE</h6>
                   <p>The new Range Rover Evoque is now available with PHEV technology, delivering the performance, refinement and capability customers expect together with an electric-only range of up to 66 km and CO2 emissions as low as
                     32 g/km. Badged P300e, the new Range Rover Evoque plug-in hybrid is based on Land Rover’s state-of-the-art Premium Transverse Architecture, which was designed to support electrification while maintaining Land Rover’s signature off-road capability. The new plug-in hybrid
                     P300e model joins the existing 48-volt mild-hybrid SUV in the range, bringing new levels of efficiency to the premium
@@ -487,7 +486,7 @@
                 </div>
                 <div class="col-xl-4 col-md-6">
                   <img class="nl-img" src="img/new-launches/new-range-rover.png" />
-                  <h6>NEW RANGE ROVER</h6>
+                  <h6 class="pt-4">NEW RANGE ROVER</h6>
                   <p>The flagship Range Rover SUV received an upgrade in the year, in the form of Ingenium straight-six balance,
                     as well as refinement and efficiency to enhance its peerless luxury and enduring appeal. The new Range
                     Rover is cleaner and more responsive thanks to improved efficiency and more immediate power delivery
