--- a/premedia/Tatamotors/downloads.html
+++ b/premedia/Tatamotors/downloads.html
@@ -328,7 +328,8 @@
                       <tr><td>Summarised Statement of Assets and Liabilities (Standalone)</td><td><a target="_blank" href="pdf/ss-aandl-standalone.pdf"><img src="img/pdf.png" alt="Summarised Statement of Assets and Liabilities (Standalone)" /></a></td></tr>
                       <tr><td>Summarised Statement of Profit and Loss (Standalone)</td><td><a target="_blank" href="pdf/ss-profit-loss-standalone.pdf"><img src="img/pdf.png" alt="Summarised Statement of Profit and Loss (Standalone)" /></a></td></tr>
                       <tr><td>Financial Statistics - Standalone</td><td><a target="_blank" href="pdf/financial-statistics-standalone.pdf"><img src="img/pdf.png" alt="Financial Statistics - Standalone" /></a></td></tr>
-                      <tr class="table-info"><th width="80%">Statutory Reports</th><th width="20%">Download</th></tr>		
+                      <tr class="table-info"><th width="80%">Statutory Reports</th><th width="20%">Download</th></tr>
+                      <tr><td>Board's Report</td><td><a target="_blank" href="pdf/board-report.pdf"><img src="img/pdf.png" alt="Board's Report" /></a></td></tr>
                       <tr><td>Annexure to the Board's Report</td><td><a target="_blank" href="pdf/annexure-board-report.pdf"><img src="img/pdf.png" alt="Annexure to the Board's Report" /></a></td></tr>
                       <tr><td>Management Discussion and Analysis</td><td><a target="_blank" href="pdf/management-discussion.pdf"><img src="img/pdf.png" alt="Management Discussion and Analysis" /></a></td></tr>
                       <tr><td>Risk Factors</td><td><a target="_blank" href="pdf/rist-factors.pdf"><img src="img/pdf.png" alt="Risk Factors" /></a></td></tr>
