--- a/premedia/cert/index.html
+++ b/premedia/cert/index.html
@@ -22,6 +22,7 @@
 		}
 		.btn-container {
 			padding: 1em .5em;
+			cursor: pointer;
 		}
 		.cert-btn-fg {
 			z-index: 2;
@@ -29,15 +30,19 @@
 		}
 		.cert-btn-fg.iqvia {
 			clip-path: polygon(0 0%, 100% 0%, 100% 25%, 0 25%);
+			-webkit-clip-path: polygon(0 0%, 100% 0%, 100% 25%, 0 25%);
 		}
 		.cert-btn-fg.oce {
 			clip-path: polygon(0 25%, 100% 25%, 100% 50%, 0 50%);
+			-webkit-clip-path: polygon(0 25%, 100% 25%, 100% 50%, 0 50%);
 		}
 		.cert-btn-fg.remote {
 			clip-path: polygon(0 50%, 100% 50%, 100% 75%, 0 75%);
+			-webkit-clip-path: polygon(0 50%, 100% 50%, 100% 75%, 0 75%);
 		}
 		.cert-btn-fg.veeva {
 			clip-path: polygon(0 75%, 100% 75%, 100% 100%, 0 100%);
+			-webkit-clip-path: polygon(0 75%, 100% 75%, 100% 100%, 0 100%);
 		}
 		.cert-btn-fg .btn-container:not(.active){
 			opacity: .15;
